# py-macro

./: README.md  main.py  pyproject.toml  thr.py
dependencies/: custom.qss
preset/: coin.json  gamble.json
